# volttron-lib-auth

./: .gitignore  .pre-commit-config.yaml  mypy.ini  pyproject.toml  upgrade-dependencies-latest.py
.github/workflows/: deploy-pre-release.yml  run-tests.yml
src/volttron/auth/: __init__.py  auth_entry.py  auth_exception.py  auth_file.py  auth_service.py  auth_utils.py  authz_manager.py  base_client.py  base_server.py  file_based_auth_manager.py  file_based_credential_store.py
src/volttron/platform/auth/: __init__.py  auth_entry.py  auth_file.py  auth_model.py  auth_service.py  auth_utils.py  authz_manager.py  base.py  base_server.py  credential_manager.py  file_based_auth_manager.py  file_based_credential_store.py  identity_based_credentials.py  vctl_auth_control.py
src/volttron/services/: auth_service.py
src/volttron/services/auth/: __init__.py  auth_service.py
tests/: conftest.py  test_auth_file.py  test_auth_service.py
tests/authfixtures/: messagebus_fixtures.py
tests/unit/: test_auth_model.py  test_authz_model.py  test_file_based_credential_store.py  test_loaded_messagebus.py  test_volttron_auth_manager.py  test_with_parent_class.py
