[tool.poetry]
name = "volttron-lib-auth"
version = "0.1.0"
description = "Base Authentication Library for VOLTTRON"
authors = ["C. Allwardt <3979063+craig8@users.noreply.github.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/eclipse-volttron/volttron-lib-auth"
homepage = "https://github.com/eclipse-volttron/volttron-lib-auth"
keywords = []
packages = [ { include = "volttron", from = "src" } ]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: Apache Software License"
]
[tool.poetry.dependencies]
python = ">=3.10,<4.0"
volttron = { path="../volttron-core", develop = true}

[tool.poetry.group.dev.dependencies]
# formatting, quality, tests
pytest = "^7.4.4"
mock = "^5.1.0"
pre-commit = "^3.6.0"
yapf = "^0.40.2"
toml = "^0.10.2"
mypy = "^1.8.0"
coverage = "^7.4.0"
Sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.2.2"]
build-backend = "poetry.core.masonry.api"

[tool.yapfignore]
ignore_patterns = [
    ".venv/**",
    ".pytest_cache/**",
    "dist/**",
    "docs/**"
]

[tool.yapf]
based_on_style = "pep8"
spaces_before_comment = 4
column_limit = 120
split_before_logical_operator = true

[tool.mypy]
show_error_context = true
pretty = true
show_column_numbers = true

